# pyfemlite

./: README.md  cantilever_convergence.csv  pyproject.toml
.github/workflows/: ci.yml
examples/: cantilever_convergence.py  cantilever_elasticity.py  poisson_mms.py
src/pyfemlite/: __init__.py  cli.py
src/pyfemlite/fem/: __init__.py  assembly.py  bc.py  elasticity2d.py  flux.py  materials.py  poisson2d.py  quadrature.py  shape_t3.py  traction.py
src/pyfemlite/io/: __init__.py  vtk.py
src/pyfemlite/mesh/: __init__.py  boundary.py  structured_tri.py
src/pyfemlite/post/: __init__.py  beam_verify.py
tests/: test_beam_verify.py  test_boundary_summary.py  test_boundary_validate.py  test_elasticity_runs.py  test_poisson_runs.py
